--- a/upload.html
+++ b/upload.html
@@ -28,8 +28,8 @@
                 </div>
                 <div class="card-footer">
                     <h5>Predicción del modelo Clip:</h5>
-                    <p id="prediction"></p>
                     <img id="preview" src="" alt="Image preview" style="width: 100px; height: auto;">
+                    <h6 id="prediction"></h6>
                 </div>
             </div>
         </div>
