--- a/upload.html
+++ b/upload.html
@@ -29,7 +29,7 @@
                 <div class="card-footer">
                     <h5>Predicción del modelo Clip:</h5>
                     <img id="preview" src="" alt="Image preview" style="width: 100px; height: auto;">
-                    <h6 id="prediction"></h6>
+                    <h6 class="mt-2" id="prediction"></h6>
                 </div>
             </div>
         </div>
