--- a/upload.html
+++ b/upload.html
@@ -15,19 +15,19 @@
         <div class="d-flex justify-content-center mt-5">
             <div class="card text-center mt-5">
                 <div class="card-header">
-                    <h1>Predecir imagen</h1>
+                    <h1>Predict image</h1>
                 </div>
                 <div class="card-body">
                     <form id="upload-form" action="/process_image" method="post" enctype="multipart/form-data">
                         <div class="mb-3">
-                            <label for="file" class="form-label">Seleccionar imagen</label>
+                            <label for="file" class="form-label">Select image</label>
                             <input class="form-control" type="file" name="file" id="file" />
                         </div>
-                        <button type="submit" class="btn btn-secondary">Predecir</button>
+                        <button type="submit" class="btn btn-secondary">Predict</button>
                     </form>
                 </div>
                 <div class="card-footer">
-                    <h5>Predicción del modelo Clip:</h5>
+                    <h5>Clip model prediction:</h5>
                     <img id="preview" src="" alt="Image preview" style="width: 100px; height: auto;">
                     <h6 class="mt-2" id="prediction"></h6>
                 </div>
